2004-11-07  Bruno coudoin  <bruno.coudoin@free.fr>

	* configure.in: added AC_CANONICAL_TARGET to avoid the warning in AC_ARG_PROGRAM was called before AC_CANONICAL_TARGET	
	bug reported by the debian team Yann Dirson.

2004-11-07  Bruno coudoin  <bruno.coudoin@free.fr>

	Alexey Lubimov <avl@l14.ru> made all the sounds for russian.
	
	* boards/babymatch/board7_0.xml.in: Changed babymatch/board7_0.xml.in by Karl Ove Hufthammer <karl@huftis.org>
	so that is more complex.
	* boards/babymatch/umbrella.png: taken from openclipart
	* boards/sounds/ru/.cvsignore:
	* boards/sounds/ru/alphabet/.cvsignore:
	* boards/sounds/ru/alphabet/1.ogg:
	* boards/sounds/ru/alphabet/10.ogg:
	* boards/sounds/ru/alphabet/11.ogg:
	* boards/sounds/ru/alphabet/12.ogg:
	* boards/sounds/ru/alphabet/13.ogg:
	* boards/sounds/ru/alphabet/14.ogg:
	* boards/sounds/ru/alphabet/15.ogg:
	* boards/sounds/ru/alphabet/16.ogg:
	* boards/sounds/ru/alphabet/17.ogg:
	* boards/sounds/ru/alphabet/18.ogg:
	* boards/sounds/ru/alphabet/19.ogg:
	* boards/sounds/ru/alphabet/2.ogg:
	* boards/sounds/ru/alphabet/20.ogg:
	* boards/sounds/ru/alphabet/3.ogg:
	* boards/sounds/ru/alphabet/4.ogg:
	* boards/sounds/ru/alphabet/5.ogg:
	* boards/sounds/ru/alphabet/6.ogg:
	* boards/sounds/ru/alphabet/7.ogg:
	* boards/sounds/ru/alphabet/8.ogg:
	* boards/sounds/ru/alphabet/9.ogg:
	* boards/sounds/ru/alphabet/a.ogg:
	* boards/sounds/ru/alphabet/b.ogg:
	* boards/sounds/ru/alphabet/c.ogg:
	* boards/sounds/ru/alphabet/cyr_a.ogg:
	* boards/sounds/ru/alphabet/cyr_b.ogg:
	* boards/sounds/ru/alphabet/cyr_c.ogg:
	* boards/sounds/ru/alphabet/cyr_ch.ogg:
	* boards/sounds/ru/alphabet/cyr_d.ogg:
	* boards/sounds/ru/alphabet/cyr_e.ogg:
	* boards/sounds/ru/alphabet/cyr_f.ogg:
	* boards/sounds/ru/alphabet/cyr_g.ogg:
	* boards/sounds/ru/alphabet/cyr_h.ogg:
	* boards/sounds/ru/alphabet/cyr_hard.ogg:
	* boards/sounds/ru/alphabet/cyr_hard_e.ogg:
	* boards/sounds/ru/alphabet/cyr_hard_i.ogg:
	* boards/sounds/ru/alphabet/cyr_i.ogg: